add radio disabled style

--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
             </div>
 
             <div class="a-payment__content" id="creditForm">
-              <label class="a-radio">
-                <input class="a-radio__input" type="radio" name="credit" />
+              <label class="a-radio a-radio--disabled">
+                <input class="a-radio__input" type="radio" name="credit" disabled />
                 <span class="a-radio__checkmark"></span>
                 <span class="a-radio__label">Кредит в интернет-магазине</span>
               </label>
