--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
                 <img src="./icons/calendar.png" alt="Срок выплат" />
                 <span>срок выплат</span>
                 <span>24 месяца</span>
-                <span>12 месяцев</span>
+                <!-- <span>12 месяцев</span> -->
               </div>
             </div>
             <div class="a-col-12 a-col-sm-4 a-col-lg">
@@ -1026,7 +1026,7 @@
                 <img src="./icons/percent.png" alt="Процентная ставка" />
                 <span>процентная ставка</span>
                 <span>0,00001%</span>
-                <span>0,00001%</span>
+                <!-- <span>0,00001%</span> -->
               </div>
             </div>
             <div class="a-col-12 a-col-sm-4 a-col-lg">
@@ -1034,7 +1034,7 @@
                 <img src="./icons/coins.png" alt="Размер 1-ого взноса" />
                 <span>размер 1-ого взноса</span>
                 <span>38.00 BYN</span>
-                <span>38.00 BYN</span>
+                <!-- <span>38.00 BYN</span> -->
               </div>
             </div>
             <div class="a-col-12 a-col-sm-4 a-col-lg">
@@ -1042,7 +1042,7 @@
                 <img src="./icons/cash.png" alt="Ежемесячный платеж" />
                 <span>ежемесячный платеж</span>
                 <span>26.00 BYN</span>
-                <span>26.00 BYN</span>
+                <!-- <span>26.00 BYN</span> -->
               </div>
             </div>
             <div class="a-col-12 a-col-sm-4 a-col-lg">
@@ -1050,7 +1050,7 @@
                 <img src="./icons/cashless.png" alt="Сумма переплаты" />
                 <span>сумма переплаты</span>
                 <span>26.00 BYN</span>
-                <span>26.00 BYN</span>
+                <!-- <span>26.00 BYN</span> -->
               </div>
             </div>
           </div>
