add calc to link

--- a/index.html
+++ b/index.html
@@ -855,8 +855,8 @@
         <div class="a-calc__section">
           <div class="a-d-flex a-align-items-center">
             <span class="a-calc__label">Стоимость товара</span>
-            <span class="a-calc__label-thin"
-              >Смартфон Samsung SM-A505FM 128Gb Galaxy A50</span
+            <a class="a-calc__link" href="javascript:void(0)"
+              >Смартфон Samsung SM-A505FM 128Gb Galaxy A50</a
             >
           </div>
           <span class="a-calc__label">709.00 BYN</span>
@@ -904,9 +904,7 @@
         <div
           class="
             a-calc__section
-            a-d-flex
-            a-align-items-center
-            a-justify-content-between
+            a-d-flex a-align-items-center a-justify-content-between
           "
         >
           <span class="a-calc__label">Сумма сделки</span>
@@ -982,9 +980,7 @@
         <div
           class="
             a-calc__section
-            a-d-flex
-            a-align-items-center
-            a-justify-content-between
+            a-d-flex a-align-items-center a-justify-content-between
           "
         >
           <span class="a-calc__label">Сумма сделки</span>
@@ -1000,13 +996,15 @@
         <div
           class="
             a-bank__section
-            a-d-flex
-            a-align-items-center
-            a-justify-content-between
+            a-d-flex a-align-items-center a-justify-content-between
           "
         >
           <div>
-            <img class="a-bank__image" src="./images/bank.png" alt="Паритет банк" />
+            <img
+              class="a-bank__image"
+              src="./images/bank.png"
+              alt="Паритет банк"
+            />
             <span class="a-bank__title">Рассрочка на 24 месяца</span>
           </div>
           <button class="a-button a-button--outlined">Выбрать</button>
