--- a/index.html
+++ b/index.html
@@ -1010,45 +1010,45 @@
           <button class="a-button a-button--outlined">Выбрать</button>
         </div>
         <div class="a-bank__section">
-          <div class="a-row">
-            <div class="a-col-12 a-col-sm-4 a-col-lg">
+          <div class="a-bank__row">
+            <div class="a-bank__col">
               <div class="a-bank__card">
                 <img src="./icons/calendar.png" alt="Срок выплат" />
                 <span>срок выплат</span>
                 <span>24 месяца</span>
-                <!-- <span>12 месяцев</span> -->
+                <span>12 месяцев</span>
               </div>
             </div>
-            <div class="a-col-12 a-col-sm-4 a-col-lg">
+            <div class="a-bank__col">
               <div class="a-bank__card">
                 <img src="./icons/percent.png" alt="Процентная ставка" />
                 <span>процентная ставка</span>
                 <span>0,00001%</span>
-                <!-- <span>0,00001%</span> -->
+                <span>0,00001%</span>
               </div>
             </div>
-            <div class="a-col-12 a-col-sm-4 a-col-lg">
+            <div class="a-bank__col">
               <div class="a-bank__card">
                 <img src="./icons/coins.png" alt="Размер 1-ого взноса" />
                 <span>размер 1-ого взноса</span>
                 <span>38.00 BYN</span>
-                <!-- <span>38.00 BYN</span> -->
+                <span>38.00 BYN</span>
               </div>
             </div>
-            <div class="a-col-12 a-col-sm-4 a-col-lg">
+            <div class="a-bank__col">
               <div class="a-bank__card">
                 <img src="./icons/cash.png" alt="Ежемесячный платеж" />
                 <span>ежемесячный платеж</span>
                 <span>26.00 BYN</span>
-                <!-- <span>26.00 BYN</span> -->
+                <span>26.00 BYN</span>
               </div>
             </div>
-            <div class="a-col-12 a-col-sm-4 a-col-lg">
+            <div class="a-bank__col">
               <div class="a-bank__card">
                 <img src="./icons/cashless.png" alt="Сумма переплаты" />
                 <span>сумма переплаты</span>
                 <span>26.00 BYN</span>
-                <!-- <span>26.00 BYN</span> -->
+                <span>26.00 BYN</span>
               </div>
             </div>
           </div>
