insert card description to dynamic position

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="a-section__content">
           <div class="a-delivery">
-            <div class="a-row">
+            <div class="a-row" id="deliveryCards">
               <div class="a-col-12 a-col-sm-4 mb-3">
                 <div class="a-card" id="pickUp">
                   <div class="a-card__image-container">
@@ -308,7 +308,7 @@
 
         <div class="a-section__content">
           <div class="a-payment">
-            <div class="a-row">
+            <div class="a-row" id="paymentCards">
               <div class="a-col-12 a-col-sm-4 a-col-lg">
                 <div class="a-card" id="cash">
                   <div class="a-card__image-container">
@@ -579,7 +579,7 @@
         </div>
       </div>
 
-      <!-- <div id="a-payment" class="a-section">
+      <div id="a-payment" class="a-section">
         <div class="a-section__header">
           <h2 class="a-section__title">Оплата</h2>
           <a class="a-section__edit" href="javascript:void(0)">Изменить</a>
@@ -587,7 +587,7 @@
 
         <div class="a-section__content">
           <div class="a-payment">
-            <div class="a-row">
+            <div class="a-row" id="paymentCards">
               <div class="a-col-12 a-col-sm-4 a-col-md">
                 <div class="a-card" id="cash">
                   <div class="a-card__image-container">
@@ -801,7 +801,7 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <div id="a-customer" class="a-section">
         <div class="a-section__header">
@@ -1085,6 +1085,6 @@
       <!-- </div> -->
     </div>
 
-    <script src="scripts/dist/index.prod.js"></script>
+    <script src="scripts/dist/index.dev.js"></script>
   </body>
 </html>
