--- a/index.html
+++ b/index.html
@@ -711,8 +711,8 @@
               </p>
               <p>К оплате принимаются карты Visa и MasterCard.</p>
               <p>
-                <b>Важно!</b> Прежде чем проводить платеж, уточните наличие товара у
-                менеджера интернет-магазина.
+                <b>Важно!</b> Прежде чем проводить платеж, уточните наличие
+                товара у менеджера интернет-магазина.
               </p>
             </div>
 
@@ -993,13 +993,7 @@
       </div>
 
       <div class="a-bank">
-        <div
-          class="
-            a-bank__section
-            a-row
-            a-align-items-center
-          "
-        >
+        <div class="a-bank__section a-row a-align-items-center">
           <div class="a-col">
             <img
               class="a-bank__image"
@@ -1016,7 +1010,9 @@
           <div class="a-bank__row">
             <div class="a-bank__col">
               <div class="a-bank__card">
-                <img src="./icons/calendar.png" alt="Срок выплат" />
+                <div class="a-bank__card-image">
+                  <img src="./icons/calendar.png" alt="Срок выплат" />
+                </div>
                 <span>срок выплат</span>
                 <span>24 месяца</span>
                 <span>12 месяцев</span>
@@ -1024,7 +1020,9 @@
             </div>
             <div class="a-bank__col">
               <div class="a-bank__card">
-                <img src="./icons/percent.png" alt="Процентная ставка" />
+                <div class="a-bank__card-image">
+                  <img src="./icons/percent.png" alt="Процентная ставка" />
+                </div>
                 <span>процентная ставка</span>
                 <span>0,00001%</span>
                 <span>0,00001%</span>
@@ -1032,7 +1030,9 @@
             </div>
             <div class="a-bank__col">
               <div class="a-bank__card">
-                <img src="./icons/coins.png" alt="Размер 1-ого взноса" />
+                <div class="a-bank__card-image">
+                  <img src="./icons/coins.png" alt="Размер 1-ого взноса" />
+                </div>
                 <span>размер 1-ого взноса</span>
                 <span>38.00 BYN</span>
                 <span>38.00 BYN</span>
@@ -1040,7 +1040,9 @@
             </div>
             <div class="a-bank__col">
               <div class="a-bank__card">
-                <img src="./icons/cash.png" alt="Ежемесячный платеж" />
+                <div class="a-bank__card-image">
+                  <img src="./icons/cash.png" alt="Ежемесячный платеж" />
+                </div>
                 <span>ежемесячный платеж</span>
                 <span>26.00 BYN</span>
                 <span>26.00 BYN</span>
@@ -1048,7 +1050,9 @@
             </div>
             <div class="a-bank__col">
               <div class="a-bank__card">
-                <img src="./icons/cashless.png" alt="Сумма переплаты" />
+                <div class="a-bank__card-image">
+                  <img src="./icons/cashless.png" alt="Сумма переплаты" />
+                </div>
                 <span>сумма переплаты</span>
                 <span>26.00 BYN</span>
                 <span>26.00 BYN</span>
